Nouvelle page ajoutée
page centres d'interets ajoutée

--- a/contact_informations.html
+++ b/contact_informations.html
@@ -12,7 +12,7 @@
 
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Louis Galibert</a>
+  <a class="navbar-brand" href="parcour_pro.html">Louis Galibert</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -22,13 +22,10 @@
         <a class="nav-link" href="#">Contact Information</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="parcour_pro.html">Parcour Professionnel</a>
+        <a class="nav-link" href="parcour_pro.html">Parcours</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Compétences</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="">Centres d'intérêt</a>
+        <a class="nav-link" href=centres_d_interet.html"">Centres d'intérêt</a>
       </li>
     </ul>
   </div>
