--- a/parcour_pro.html
+++ b/parcour_pro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Parcours Professionnel</title>
+	<title>Parcours </title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">    
@@ -22,20 +22,22 @@
         <a class="nav-link" href="contact_informations.html">Contact Information</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Parcour Professionnel<span class="sr-only">(current)</span>
+        <a class="nav-link" href="#">Parcours<span class="sr-only">(current)</span>
 </a>
       </li>
+      
       <li class="nav-item">
-        <a class="nav-link" href="#">Compétences</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="">Centres d'intérêt</a>
+        <a class="nav-link" href="centres_d_interet.html">Centres d'intérêt</a>
       </li>
     </ul>
   </div>
 </nav>
 <!-- Photo de présentation-->
 <img src="img/louis_galibert.jpg" alt="photo de Professionnel" class="rounded mx-auto d-block profilePicture">
+
+
+<h1>Parcours d'études</h1>
+
 
 
 <!-- Link for the Bootstrap API -->
