--- a/centres_d_interet.html
+++ b/centres_d_interet.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-
+<link rel="stylesheet" type="text/css" href="style_centres_d_interet.css"> 
 </head>
 
 <body>
@@ -35,7 +35,17 @@
 </nav>
 
 
-<h1>Parcours d'études</h1>
+<h1>Sports</h1>
+
+<video controls src="video/Surf_Louis.mp4">Surf</video>
+
+<!--<video width="400" height="222" controls="controls">
+  <source src="video/Surf_Louis.mp4" type="video/mp4" />
+  Surf
+</video>-->
+
+<h1>Loisirs</h1>
+
 
 
 
