--- a/contact_informations.html
+++ b/contact_informations.html
@@ -25,7 +25,7 @@
         <a class="nav-link" href="parcour_pro.html">Parcours</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href=centres_d_interet.html"">Centres d'intérêt</a>
+        <a class="nav-link" href="centres_d_interet.html">Centres d'intérêt</a>
       </li>
     </ul>
   </div>
