--- a/centres_d_interet.html
+++ b/centres_d_interet.html
@@ -38,6 +38,7 @@
 <h1>Sports</h1>
 
 <video controls src="video/Surf_Louis.mp4">Surf</video>
+<img src="img/rugby.jpg" alt="photo de Professionnel" class="rounded mx-auto d-block RugbyPicture">
 
 <!--<video width="400" height="222" controls="controls">
   <source src="video/Surf_Louis.mp4" type="video/mp4" />
