parcours pro et études

--- a/parcour_pro.html
+++ b/parcour_pro.html
@@ -38,6 +38,38 @@
 
 <h1>Parcours d'études</h1>
 
+<textarea rows="5" cols="70">
+2015 – 2018 › CYCLE PREPARATOIRE INTEGRE › ECE PARIS LYON ECOLE D’INGENIEUR
+2018 –2019› CYCLE L1 ECOLE D’INGENIEUR › ECE PARIS LYON ECOLE D’INGENIEUR
+> Spécialisation dans la majeure Objets Connectés Réseaux et Services pour l’année 2019/2020
+2018 – 2019› SEMESTRE D’ETUDES AU PAYS DE GALLES›  PRIFYSGOL BANGOR UNIVERSITY
+
+</textarea>
+
+
+<h2>               </h2>
+
+<h3>Parcours Professionnel</h3>
+
+<textarea rows="7" cols="70">
+JANVIER 2019 – FEVRIER 2019 › OCTO FINANCES, PARIS › ASSISTANT GESTION
+> Société de vente d’obligations
+> Assistance administration, comptabilité et Middle Office
+> Assistance direction et mise en relation avec les clients pour signature de contrat
+
+JUIN 2018 – JUILLET 2018 › L’ATELIER DES PAINS & CO, LEVALLOIS-PERRET › VENDEUR
+> Réseau de boulangeries et laboratoire alimentaire
+> Vente et renseignement client
+> Aide à la livraison et logistique
+
+JUIN 2017 – JUILLET 2017 › OFI ASSET MANAGEMENT, PARIS› ASSISTANT LOGISTIQUE 
+> Entreprise de gestion d’actifs
+> Missions de logistique et de maintenance
+> Service et entretien du matériel de l’entreprise, reprographie…
+
+
+</textarea>
+
 
 
 <!-- Link for the Bootstrap API -->
