--- a/centres_d_interet.html
+++ b/centres_d_interet.html
@@ -13,7 +13,7 @@
 
 <!-- MENU -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand Name" href="#">Louis Galibert</a>
+  <a class="navbar-brand Name" href="parcour_pro.html">Louis Galibert</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
