--- a/parcour_pro.html
+++ b/parcour_pro.html
@@ -32,7 +32,7 @@
     </ul>
   </div>
 </nav>
-<!-- Photo de présentation-->
+<!-- Photo de profil-->
 <img src="img/louis_galibert.jpg" alt="photo de Professionnel" class="rounded mx-auto d-block profilePicture">
 
 
@@ -51,7 +51,7 @@
 
 <h3>Parcours Professionnel</h3>
 
-<textarea rows="7" cols="70">
+<textarea rows="10" cols="70">
 JANVIER 2019 – FEVRIER 2019 › OCTO FINANCES, PARIS › ASSISTANT GESTION
 > Société de vente d’obligations
 > Assistance administration, comptabilité et Middle Office
@@ -70,6 +70,14 @@ JUIN 2017 – JUILLET 2017 › OFI ASSET MANAGEMENT, PARIS› ASSISTANT LOGISTIQ
 
 </textarea>
 
+
+
+<!--<img src="img/Louis.jpg" alt="photo de Professionnel" class="rounded mx-auto d-block profilePictureBounce">-->
+
+
+
+<!--ANIMATION-->
+<h4>Louis Galibert</h4>
 
 
 <!-- Link for the Bootstrap API -->
